Huge migration to Redux + Redux sagas

--- a/public/styles.css
+++ b/public/styles.css
@@ -1,3 +1,14 @@
+body, html {
+  height: 100%;
+  margin: 0;
+}
+
+body {
+  background-image: url('assets/background.png');
+  background-repeat: "repeat";
+  top: 0;
+}
+
 header {
   display: block;
   background-color: black;
