adding spinner + bug fixes

--- a/public/styles.css
+++ b/public/styles.css
@@ -1,12 +1,13 @@
 body, html {
   height: 100%;
+  width: 100%;
+  min-height:100%;
   margin: 0;
 }
 
 body {
   background-image: url('assets/background.png');
   background-repeat: repeat;
-  background-attachment: fixed;
   top: 0;
 }
 
