--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -33,7 +33,7 @@
 /* Class */
 .navBar {
     width: 100%;
-    background-color: #111;
+    background-color: #1F2833;
     color: white;
     padding: 10px;
     min-height: 70px;
