--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -11,7 +11,7 @@
 .navLink:visited,
 .navLink:link {
     padding: 10px 0;
-    font-size: 30px;
+    font-size: 20px;
     font-family: monospace;
     color: white;
     text-decoration: none;
@@ -114,7 +114,7 @@
     .navLink:active,
     .navLink:visited,
     .navLink:link {
-        padding: 10px 15px;
+        padding: 15px;
         text-decoration: none;
         white-space: nowrap;
     }
