adding book subsection

--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -22,6 +22,10 @@
     white-space: nowrap;
 }
 
+.redLink {
+    color: red !important;
+}
+
 .navBarButton {
     font-size: 40px;
     margin-right: 30px;
